[package]
name = "ash-ad-wrappers"
version = "0.1.0"
edition = "2021"

[dependencies]
ash-context = {path = "ash-context"}
ash-data-wrappers = {path = "ash-data-wrappers"}
ash-debug-wrappers = {path = "ash-debug-wrappers"}
ash-queue-wrappers = {path = "ash-queue-wrappers"}
ash-surface-wrappers = {path = "ash-surface-wrappers"}
ash-sync-wrappers = {path = "ash-sync-wrappers"}
