[package]
name = "ash-queue-wrappers"
version = "0.1.0"
edition = "2021"

[dependencies]
ash-common-imports = {path = "../ash-common-imports"}
ash-data-wrappers = {path = "../ash-data-wrappers"}
ash-sync-wrappers = {path = "../ash-sync-wrappers"}
ash-pipeline-wrappers = {path = "../ash-pipeline-wrappers"}
